# estrutura-de-dados

./: .gitignore  Booleano.h  CMakeLists.txt  LICENSE  README.rst
ArvoreBinaria/: ArvoreBinaria.c  ArvoreBinaria.h
bibliotecas/: FilaPointer.h  PilhaPointer.h
pote/: fat.c
recursao-exemplos/: fibonacciRecursivo.c  pote.c
src/: booleano.h
src/arvore-binaria/: ArvoreBinaria.h  README.rst
src/arvores/: README.rst
src/fila/: fila.c  fila.h  filaCircular.c  filaCircular.h  filaPointer.c  filaPointer.h
src/lista/: lista.c  lista.h  listaPointer.h
src/ordenacao/: README.rst  bubbleSort.c  bubbleSort.h  heapSort.h  insertionSort.c  insertionSort.h  mergeSort.h  quickSort.c  quickSort.h  selecao.c  selecao.h
src/pilha/: pilha.h  pilhaPointer.c  pilhaPointer.h
src/recursao/: README.rst  fibonacciRecursivo.c  fibonacciRecursivo.h  main.c  pote.c  pote.h  subsequenciaCrescenteMaxima.c  subsequenciaCrescenteMaxima.h
